--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "psycopg2-binary>=2.9,<3.0",
   "gunicorn>=21.2,<22.0",
   "uvicorn>=0.30,<0.31",
+  "websockets>=12.0,<13.0",
   "whitenoise>=6.7,<7.0",
 ]
 
