--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   uuid: ^4.4.0
   web_socket_channel: ^3.0.1
   google_fonts: ^6.2.1
+  cryptography: ^2.7.0
+  url_launcher: ^6.3.0
 
 
 
