--- a/frontend/web/manifest.json
+++ b/frontend/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "smart_trip_planner",
-    "short_name": "smart_trip_planner",
+    "name": "Smart Trip Planner",
+    "short_name": "Smart Trip Planner",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#FDFBF7",
+    "theme_color": "#0B6E4F",
+    "description": "Smart Trip Planner.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
