--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_fonts: ^6.2.1
   cryptography: ^2.7.0
   url_launcher: ^6.3.0
+  flutter_local_notifications: ^17.2.1
 
 
 
